# AbaQuant

./: .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  MANIFEST.in  README.md  SECURITY.md  pyproject.toml  requirements.txt
docs/: conf.py  index.rst
examples/: 00_import_all_public_modules.py  01_derivatives.ipynb  01_derivatives.py  02_financial_math.py  03_derivatives_advanced_models.py  04_credit_risk.ipynb  04_credit_risk.py  05_portfolio_optimization.py  06_marketdata_offline.ipynb  06_marketdata_offline.py  07_marketdata_live_cached_financials.ipynb  07_marketdata_live_cached_financials.py  08_root_facades.py  09_visualizations.ipynb  09_visualizations.py  10_visualization_theme.ipynb  10_visualization_theme.py  11_visualize_method_gallery.ipynb  11_visualize_method_gallery.py  12_option_model_visual_report.py  13_portfolio_credit_visual_dashboard.py  14_scenario_analysis.ipynb  14_scenario_analysis.py  15_sec_xbrl_fundamentals.ipynb  15_sec_xbrl_fundamentals.py  16_fred_rate_curve.ipynb  16_fred_rate_curve.py  17_option_chain_analytics.ipynb  17_option_chain_analytics.py  18_option_strategy_builder.ipynb  18_option_strategy_builder.py  19_portfolio_backtesting.py  20_risk_dashboard.py  21_exportable_reports.ipynb  21_exportable_reports.py  22_derivative_calibration.ipynb  22_derivative_calibration.py  EXAMPLES_REFACTOR_REPORT.md  EXAMPLES_VALIDATION_REPORT.md  MODULE_COVERAGE.md  (+8 more)
examples in notebooks/: 00_import_all_public_modules.ipynb  01_derivatives.py  02_financial_math.ipynb  03_derivatives_advanced_models.ipynb  05_portfolio_optimization.ipynb  05_portfolio_optimization.py  06_marketdata_offline.py  08_root_facades.ipynb  08_root_facades.py  12_option_model_visual_report.ipynb  12_option_model_visual_report.py  13_portfolio_credit_visual_dashboard.ipynb  13_portfolio_credit_visual_dashboard.py  14_scenario_analysis.py  15_sec_xbrl_fundamentals.py  18_option_strategy_builder.py  19_portfolio_backtesting.ipynb  19_portfolio_backtesting.py  20_risk_dashboard.ipynb  22_derivative_calibration.py  23_data_provenance.ipynb  23_data_provenance.py  24_manual_and_cached_credit_examples.ipynb  25_applied_marketdata_workflows.ipynb  EXAMPLES_REFACTOR_REPORT.md  EXAMPLES_VALIDATION_REPORT.md  MODULE_COVERAGE.md  README.md  applied_marketdata_universe_portfolio.py  cached_financials_credit_example.py  manual_credit_proxy_example.py  run_all_deterministic_examples.py
examples_notebooks/: README.md
requirements/: minimum.txt
scripts/: check_documentation.py  generate_api_docs.py
tests/: __init__.py  cases.py  conftest.py  test_calibration_tools.py  test_data_provenance.py  test_exportable_reports.py  test_financial_statement_cache.py  test_forwards_compounding.py  (+13 more)
(+338 files in other folders)
